import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.conan.android)
}

// Release signing credentials are supplied out of band - they used to be committed
// in plain text right here. Set them either as gradle properties (in
// ~/.gradle/gradle.properties, never in the repo) or as environment variables:
//
//   odr.keystore         / ODR_KEYSTORE          path to the keystore
//   odr.keystorePassword / ODR_KEYSTORE_PASSWORD store password
//   odr.keyPasswordPro   / ODR_KEY_PASSWORD_PRO  key password, defaults to the store one
//   odr.keyPasswordLite  / ODR_KEY_PASSWORD_LITE key password, defaults to the store one
//
// When they are absent the release variants build unsigned instead of failing, so
// contributors and CI can still build them.
// empty counts as absent: a github actions secret that is not set still reaches the
// build as an empty environment variable, and taking that at face value would use an
// empty key password instead of falling back to the store one
def signingSetting = { String property, String environmentVariable ->
    providers.gradleProperty(property)
            .orElse(providers.environmentVariable(environmentVariable))
            .filter { !it.isEmpty() }
}
def releaseKeystore = signingSetting('odr.keystore', 'ODR_KEYSTORE')
def releaseKeystorePassword = signingSetting('odr.keystorePassword', 'ODR_KEYSTORE_PASSWORD')
def releaseKeyPasswordPro = signingSetting('odr.keyPasswordPro', 'ODR_KEY_PASSWORD_PRO')
def releaseKeyPasswordLite = signingSetting('odr.keyPasswordLite', 'ODR_KEY_PASSWORD_LITE')
def hasReleaseSigning = releaseKeystore.isPresent() && releaseKeystorePassword.isPresent()

android {
    ndkVersion = "28.2.13676358"
}

// conan is taken from PATH by default. Point odr.conanExecutable (or ODR_CONAN) at a
// specific binary when it lives in a virtualenv that is not on the gradle daemon's
// PATH - the daemon captures its environment at startup, so a venv activated in the
// shell afterwards is not visible to it.
def conanExecutable_ = providers.gradleProperty('odr.conanExecutable')
        .orElse(providers.environmentVariable('ODR_CONAN'))
        .getOrElse('conan')

// android.ndkDirectory was removed in AGP 9; the ndk location now comes from the
// androidComponents sdk components provider
def ndkDirectory = androidComponents.sdkComponents.ndkDirectory.map { it.asFile.toString() }

tasks.register('conanProfile', Copy) {
    from "conanprofile.txt"
    into project.layout.buildDirectory
    inputs.property("ndkDirectory", ndkDirectory)
    filter(ReplaceTokens, tokens: ["NDK_PATH": ndkDirectory.get()])
}

["armv8", "armv7", "x86", "x86_64"].each { architecture ->
    tasks.named("conanInstall-" + architecture) {
        profile.set('build/conanprofile.txt')
        deployer.set('conandeployer.py')
        deployerFolder.set(outputDirectory.get().asFile.toString() + "/assets/core")
        dependsOn(tasks.named('conanProfile'))
        conanExecutable.set(conanExecutable_)
    }
}

android {
    defaultConfig {
        applicationId = "at.tomtasche.reader"
        minSdk = 26
        targetSdk = 36

        testApplicationId = "at.tomtasche.reader.test"
        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"

        externalNativeBuild {
            cmake {
                targets = ["odr-core"]
                arguments(
                    "-DANDROID_STL=c++_shared",
                    "-DCMAKE_TOOLCHAIN_FILE=build/conan/android_toolchain.cmake",
                    "-DCMAKE_BUILD_TYPE=RelWithDebInfo",
                )
            }
        }
    }

    flavorDimensions = ["default"]

    signingConfigs {
        if (hasReleaseSigning) {
            releasePro {
                storeFile = file(releaseKeystore.get())
                storePassword = releaseKeystorePassword.get()
                keyAlias = "reader-pro"
                keyPassword = releaseKeyPasswordPro.getOrElse(releaseKeystorePassword.get())
            }

            releaseLite {
                storeFile = file(releaseKeystore.get())
                storePassword = releaseKeystorePassword.get()
                keyAlias = "reader"
                keyPassword = releaseKeyPasswordLite.getOrElse(releaseKeystorePassword.get())
            }
        }
    }

    productFlavors {
        lite {
            if (hasReleaseSigning) {
                signingConfig = signingConfigs.releaseLite
            }

            resValue("bool", "DISABLE_TRACKING", "false")
        }

        pro {
            applicationIdSuffix = ".pro"
            versionNameSuffix = "-pro"

            if (hasReleaseSigning) {
                signingConfig = signingConfigs.releasePro
            }

            resValue("bool", "DISABLE_TRACKING", "true")
        }
    }

    buildTypes {
        release {
            minifyEnabled = true
            shrinkResources = true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.txt'
            ndk.debugSymbolLevel = "full"
        }
    }

    bundle {
        language {
            enableSplit = false
        }
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    externalNativeBuild {
        cmake {
            version = "3.22.0+"
            path = "CMakeLists.txt"
        }
    }
    lint {
        // lint errors are build failures. NewApi in particular is the check that
        // would have caught the java.nio.file usage below minSdk that shipped for
        // years while this was switched off.
        abortOnError = true

        // warnings stay warnings for now - there is a backlog of them (unused
        // resources, typography, rtl) that is not worth blocking builds on
        warningsAsErrors = false

        // consumed by github code scanning, so findings show up inline on PRs
        sarifReport = true
        htmlReport = true
    }
    buildFeatures {
        buildConfig = true
        // AGP 9 makes resValue opt-in; the flavors use it for DISABLE_TRACKING
        resValues = true
    }
    packaging {
        jniLibs {
            // No need to pickFirst libc++_shared.so if all files are identical.
            // They will be identical if NDK major version matches.
            // NDK runtime problems may occur if NDK version mismatches,
            // so comment this out, to get a compile error instead
            // pickFirsts += ['**/libc++_shared.so']
        }
    }
    namespace = 'at.tomtasche.reader'
    // ahead of targetSdk on purpose: compiling against newer APIs is independent of
    // opting in to their runtime behavior. androidx.core 1.19.0 requires 37.
    compileSdk = 37

    // TODO can and should this be architecture dependent?
    sourceSets.main.assets.srcDirs += "build/conan/armv8/assets"
}

dependencies {
    implementation libs.play.services.ads
    implementation libs.play.review
    implementation libs.user.messaging.platform

    implementation libs.androidx.appcompat
    implementation libs.androidx.core
    implementation libs.material
    implementation libs.androidx.webkit

    implementation libs.asset.extractor

    testImplementation libs.junit

    androidTestImplementation libs.espresso.core
    androidTestImplementation libs.espresso.intents
    androidTestImplementation libs.androidx.test.rules
    androidTestImplementation libs.androidx.test.runner
    androidTestImplementation libs.androidx.test.junit
    // only the debug variant of OpenFileIdling touches espresso, so the release apk
    // does not ship test infrastructure
    debugImplementation libs.espresso.idling.resource
    implementation libs.androidx.annotation
}

// Without removing .cxx dir on cleanup, double gradle clean is erroring out.
// Before removing this workaround, check if "./gradlew assembleDebug; ./gradlew clean; ./gradlew clean" works
tasks.named("clean") {
    def dotCxxDir = layout.projectDirectory.dir(".cxx")
    doFirst {
        delete dotCxxDir
    }
}
